tests/compile_fail/arrow_on_struct_object/source.c
struct Point {
    int x;
};

int main(void) {
    struct Point p;
    p->x = 1;
    return 0;
}
